2009-05-05 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-tables-tests.md: Tests for event table.
	
2009-04-30 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-tables-tests.md: Tests for event map table.

	* assembly-with-events.cs: New test file for producing tests
	for cattr table.

	* Makefile: Add new dependency.

2009-04-30 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-tables-tests.md: Tests for standalonesig table.

	* assembly-with-complex-type.cs: Added more stuff for
	field layout tests.

2009-04-30 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-tables-tests.md: Tests for field layout table.

	* assembly-with-complex-type.cs: Added more stuff for
	field layout tests.

2009-04-30 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-tables-tests.md: Tests for class layout table.

	* assembly-with-complex-type.cs: Added more stuff for
	class layout tests.

2009-04-30 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-tables-tests.md: Tests for decl security table.

	* assembly-with-cas.cs: New test file for producing tests
	for cattr table.

	* Makefile: Add new dependencies and do some cleanup.

2009-04-29 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-tables-tests.md: Tests for field marshal table.

2009-04-29 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-tables-tests.md: Tests for cattr table.

	* assembly-with-cattr.cs: New test file for producing tests
	for cattr table.

	* Makefile: Add new dependencies and do some cleanup.

2009-04-29 Rodrigo Kumpera  <rkumpera@novell.com>

	* gen-md-tests.c: Close the image after using it.
	Force the runtime to initialize with 2.0.

2009-04-28 Rodrigo Kumpera  <rkumpera@novell.com>

	* gen-md-tests.c: Fix stream header calculation.

	* cli-tables-tests.md: Tests for constant.

	* assembly-with-constants.cs: New test file for producing tests
	for constant table.

	* Makefile: Add new dependencies and do some cleanup.

2009-04-28 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-tables-tests.md: Tests for memberref.
