@@ -1,5 +1,14 @@
 2009-05-05 Rodrigo Kumpera  <rkumpera@novell.com>
 
+	* cli-tables-tests.md: Tests for propertymap table.
+
+	* assembly-with-cas.cs: New test file for producing tests
+	for property tables.
+
+	* Makefile: Add new dependencies.
+
+2009-05-05 Rodrigo Kumpera  <rkumpera@novell.com>
+
 	* cli-tables-tests.md: Tests for event table.
 	
 2009-04-30 Rodrigo Kumpera  <rkumpera@novell.com>
